# icanc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
icanc/: icanc.py
icanc/commands/: ci.py  create.py  init.py  submit.py  test.py  udebug.py
icanc/commands/common/: exception.py  paths.py  rc.py
icanc/commands/tools/: auth.py  builder.py  preprocessor.py  runner.py  udebug.py  writer.py
icanc/data/: .gitignore  README.md  icancrc.toml
icanc/data/problems/beecrowd/1000/: solution.c  testcases.toml
icanc/data/templates/: main.c
src/: icc.py
src/commands/: ci.py  create.py  init.py  submit.py  test.py
src/commands/tools/: runner.py  writer.py
src/data/: .gitignore  LICENSE  iccrc.toml
src/data/templates/: solve_one.c
