[project]
name = "icanc"
version = "0.2.0"
description = "A C preprocessor and command line utility for leetcode."
readme = "README.md"
license = { file = "README" }
keywords = ["leetcode", "c"]
dependencies = ["click==8.*", "pyperclip==1.*", "watchdog==4.*"]
[tool.setuptools]
packages = ["icanc"]
[[project.authors]]
name = "voxelstack"
email = "voxelstack@gmail.com"
[project.urls]
repository = "https://github.com/voxelstack/icanc"
[project.scripts]
icanc = "icanc.icanc:main"
[tool.setuptools.package-data]
"icanc.data" = ["data/*"]
