[project]
name = "icanc"
version = "0.4.1"
description = "A C preprocessor and command line utility for leetcode."
readme = "README.md"
license = { file = "README" }
keywords = ["leetcode", "c"]
dependencies = ["click==8.*", "pyperclip==1.*", "watchdog==4.*"]
[tool.setuptools]
packages = [
    "icanc",
    "icanc.commands",
    "icanc.commands.common",
    "icanc.commands.tools",
]
[[project.authors]]
name = "voxelstack"
email = "voxelstack@gmail.com"
[project.urls]
Homepage = "https://github.com/voxelstack/icanc"
Source = "https://github.com/voxelstack/icanc"
[project.scripts]
icanc = "icanc.icanc:main"
